The first part of the main parts and header editing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Gaming-website." />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- favicon -->
     <title>GAMiFY</title>
   </head>
   <body>
@@ -24,26 +23,35 @@
           <li><a class = "nav-item" href="#">Games</a></li>
           <li><a class = "nav-item" href="#" id="aboutus-span">About us</a></li>
           <li><a class = "nav-item" href="#">News</a></li>
-          <button id="nav-button">light</button>
+          
         </ul>
+        <button id="nav-button">light</button>
     </div>
     <!-- header-------------------------------------->
     <main>
       <section>
-        <div >
+        <div class="sec1" >
           <div class="sec1-left">
-            <p >Proverd By ELA</p>
-            <h1 >Work That We Produce For Our Clients</h1>
-            <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-            <a href="games.html"><button class="btn_GetDetails">Get more details</button></a>
+            <p id="line1" >Proverd By ELAHE</p>
+            <h1 id="line2">Work That We <br> For Our Clients</h1>
+            <p id="line3">Lorem Ipsum is simply dummy text of the printing and <br> industry. Lorem Ipsum has been the industry's <br>standard.</p>
+            <a href="games"><button class="sec1-btn">Get more details</button></a>
           </div>
-          <div style="position: relative;">
-            <img  src="assets/images/unity 1.png" alt="">
-            <img src="assets/images/cry 1.png" alt="">
-            <img src="assets/images/unreal 1.png" alt="">
-            <img src="assets/images/joy_stick 1.png" alt="">
+          <div  class="sec1-right" style="position: relative;">
+            <img  id="img1"  src="assets/images/unity 1.png" alt="unity">
+            <img id="img2"  src="assets/images/cry 1.png" alt="cry">
+            <img id="img3"  src="assets/images/unreal 1.png" alt="">
+            <img id="img4"  src="assets/images/joy_stick 1.png" alt="">
           </div>
       </div>
+      </section>
+
+      <section>
+        <div class="sec2">
+          <p>Currently Trending Games</p>
+          <button id="b3">SEE ALL</button>
+        </div>
+        
       </section>
 
 
