--- a/index2.html
+++ b/index2.html
@@ -44,9 +44,32 @@
             <p class="item2">Why work with us</p>
         </section>
         <!-- sec1^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+        <div class="sec2">
+            <div class="boxs">
+                <div class="boxs1"><div class="b" id="n1"><p>Lorem ipsum</p></div>
+                <p class="p1">Lorem Ipsum</p>
+                <p class="p2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. Lorem <br>
+                    Ipsum has been the industry's standard <br> dummy text ever since the 1500s,</p></div>
+            </div>
+
+            <div class="boxs">
+                <div class="boxs1"><div class="b" id="n2"><p >Lorem ipsum</p></div>
+                <p class="p1">Lorem Ipsum</p>
+                <p class="p2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. Lorem <br>
+                    Ipsum has been the industry's standard <br> dummy text ever since the 1500s,</p></div>
+            </div>
+
+            <div class="boxs">
+                <div class="boxs1"><div class="b" id="n3"><p>Lorem ipsum</p></div>
+                <p class="p1">Lorem Ipsum</p>
+                <p class="p2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. Lorem <br>
+                    Ipsum has been the industry's standard <br> dummy text ever since the 1500s,</p></div>
+            </div>
+        </div>
+        <!-- sec2^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+
+
         
-
-
 
 
 
