section3 & edit section2

--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,19 @@
             </div>
         </div>
         <!-- sec2^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
-
+        <section class="sec3">
+            <div class="sec3-box">
+                <img id="box-img" src="assets/images/computer.png" alt="laptop">
+                <div class="t3">
+                    <p id="sec3-t">Lorem ipsum</p> 
+                    <p id="sec3-p1">Lorem Ipsum is simply dummy text <br>of the printing and typesetting<br> industry. </p>
+                    <p id="sec3-p2">Lorem Ipsum is simply dummy text of the printing and typesetting<br>
+                         industry. Lorem Ipsum has been the industry's standard dummy 
+                        <br> text ever since the 1500s, when an unknown printer took a galley of <br>
+                         type and scrambled it to make a type specimen book. It has <br> survived not only five centuries,</p>
+                </div>
+            </div>
+        </section>
 
         
 
